tests/rosetta/out/C/arithmetic-derivative.c
// Generated by Mochi compiler v0.10.26 on 2025-07-16T12:35:44Z
// Generated by Mochi compiler v0.10.26 on 2025-07-16T12:35:44Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

typedef struct {
  int len;
  int *data;
} list_int;
static list_int list_int_create(int len) {
  list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
static list_int concat_list_int(list_int a, list_int b) {
  list_int r = list_int_create(a.len + b.len);
  for (int i = 0; i < a.len; i++)
    r.data[i] = a.data[i];
  for (int i = 0; i < b.len; i++)
    r.data[a.len + i] = b.data[i];
  return r;
}
static char *concat_string(char *a, char *b) {
  size_t len1 = strlen(a);
  size_t len2 = strlen(b);
  char *buf = (char *)malloc(len1 + len2 + 1);
  memcpy(buf, a, len1);
  memcpy(buf + len1, b, len2);
  buf[len1 + len2] = '\0';
  return buf;
}
static char *_str(int v) {
  char *buf = (char *)malloc(32);
  sprintf(buf, "%d", v);
  return buf;
}
list_int primeFactors(int n) {
  list_int factors = list_int_create(0);
  int x = n;
  while (x % 2 == 0) {
    factors = 0;
    x = (int)((((double)x) / ((double)2)));
  }
  int p = 3;
  while (p * p <= x) {
    while (x % p == 0) {
      int tmp1_data[1];
      list_int tmp1 = {1, tmp1_data};
      tmp1.data[0] = p;
      list_int tmp2 = concat_list_int(factors, tmp1);
      factors = tmp2;
      x = (int)((((double)x) / ((double)p)));
    }
    p = p + 2;
  }
  if (x > 1) {
    int tmp3_data[1];
    list_int tmp3 = {1, tmp3_data};
    tmp3.data[0] = x;
    list_int tmp4 = concat_list_int(factors, tmp3);
    factors = tmp4;
  }
  return factors;
}

const char *repeat(char *ch, int n) {
  const char *s = "";
  int i = 0;
  while (i < n) {
    char *tmp5 = concat_string(s, ch);
    s = tmp5;
    i = i + 1;
  }
  return s;
}

double D(double n) {
  if (n < 0.0) {
    return (-D((-n)));
  }
  if (n < 2.0) {
    return 0.0;
  }
  list_int factors = list_int_create(0);
  if (n < 10000000000000000000.0) {
    factors = primeFactors((int)((n)));
  } else {
    int g = (int)((n / 100.0));
    factors = primeFactors(g);
    factors = 0;
    int tmp6_data[1];
    list_int tmp6 = {1, tmp6_data};
    tmp6.data[0] = 2;
    list_int tmp7 = concat_list_int(factors, tmp6);
    factors = tmp7;
    int tmp8_data[1];
    list_int tmp8 = {1, tmp8_data};
    tmp8.data[0] = 5;
    list_int tmp9 = concat_list_int(factors, tmp8);
    factors = tmp9;
    int tmp10_data[1];
    list_int tmp10 = {1, tmp10_data};
    tmp10.data[0] = 5;
    list_int tmp11 = concat_list_int(factors, tmp10);
    factors = tmp11;
  }
  int c = factors.len;
  if (c == 1) {
    return 1.0;
  }
  if (c == 2) {
    return (double)((factors.data[0] + factors.data[1]));
  }
  double d = n / ((double)(factors.data[0]));
  return D(d) * ((double)(factors.data[0])) + d;
}

const char *pad(int n) {
  char *tmp12 = _str(n);
  const char *s = tmp12;
  while (strlen(s) < 4) {
    char *tmp13 = concat_string(" ", s);
    s = tmp13;
  }
  return s;
}

int main() {
  list_int vals = list_int_create(0);
  int n = (-99);
  while (n < 101) {
    vals = 0;
    n = n + 1;
  }
  int i = 0;
  while (i < vals.len) {
    const char *line = "";
    int j = 0;
    while (j < 10) {
      line = line + pad(vals.data[i + j]);
      if (j < 9) {
        char *tmp14 = concat_string(line, " ");
        line = tmp14;
      }
      j = j + 1;
    }
    printf("%s\n", line);
    i = i + 10;
  }
  double pow = 1.0;
  int m = 1;
  while (m < 21) {
    pow = pow * 10.0;
    char *tmp15 = _str(m);
    const char *exp = tmp15;
    if (strlen(exp) < 2) {
      char *tmp16 = concat_string(exp, " ");
      exp = tmp16;
    }
    char *tmp17 = _str(m);
    const char *res = tmp17 + repeat("0", m - 1);
    char *tmp18 = concat_string("D(10^", exp);
    char *tmp19 = concat_string(tmp18, ") / 7 = ");
    char *tmp20 = concat_string(tmp19, res);
    printf("%s\n", tmp20);
    m = m + 1;
  }
}

int main() {
  main();
  return 0;
}
